--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,9 +6,10 @@
 trigger:
 - master
 
-pool:
-  vmImage: ubuntu-latest
+pool: 
 
+  vmImage: ubuntu-latest
+name: VMSS-AgentPool
 steps:
 - task: NodeTool@0
   inputs:
